pts-core: Add ShowPostRunStatistics user configuration XML option to toggle whether various test statistics are printed at the end of testing
pts-core: Add recently-added-tests sub-command to show newly added test profiles / alternative to openbenchmarking-changes/recently-updated-tests
pts-core: Allow outputting line graphs to terminal interface as basic box plot graphs
phodevi: LXQt desktop version reporting
phodevi: Update for Microsoft Windows Server 2019
system_monitor: Allow outputting system monitor graphs to terminal interface inline

Phoronix Test Suite 8.4.1-Skiptvet
9 December 2018

pts-core: Workaround for RHEL 7.6 PHP having buggy CURL that is causing seg faults
pts-core: Ensure "." doesn't get set in PATH when launching phoronix-test-suite
pts-core: Allow PRESET_OPTIONS env var to be used when in batch mode
pts-core: FreeBSD updates
pts-core: Add PRESET_OPTIONS_VALUES environment variable that is similar to PRESET_OPTIONS but for explicit values
phodevi: Improved Radeon AMDGPU frequency detection/reporting
phodevi: Add support for reading GPU usage sensor with AMDGPU gpu_busy_percent sysfs interface
phodevi: Updated gpu_voltage sensor for AMDGPU driver
phodevi: Updated gpu_power sensor for AMDGPU driver
phodevi: Updated gpu_fanspeed sensor for AMDGPU driver
phodevi: Updated gpu_freq sensor for AMDGPU driver
phodevi: Improved physical CPU core detection on DragonFlyBSD 5.4
phodevi: Improved Spectre detection on DragonFlyBSD 5.4
phodevi: Allow using NUM_CPU_CORES to override the number of exposed CPU threads/cores to tests (alternative to PTS_NPROC / NUMBER_OF_PROCESSORS)
phodevi: Improved multi-disk reporting for non-Linux operating systems
phodevi: Minor GPU string reporting improvement

Phoronix Test Suite 8.4.0-Skiptvet
26 November 2018

phodevi: Various minor tweaks

Phoronix Test Suite 8.4.0 Milestone 3
20 November 2018

pts-core: Various external dependency updates